<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tester</string>

    <string name="test">Test</string>
    <string name="tests">Tests</string>
    <string name="answer">Answer</string>
    <string name="misc">Misc</string>
    <string name="add_test">Load new test</string>
    <string name="test_result">Test results</string>

    <string name="start_time">Test start</string>
    <string name="end_time">Test end</string>
    <string name="total_time">Total time</string>

    <string name="score">Score</string>
    <string name="score_div">%d/%d</string>
    <string name="complete_time">Done: %s</string>

    <string name="error_on_loading">An error occurred while loading</string>
    <string name="select_multiple_answer">Choose one or more correct answers:</string>
    <string name="select_single_answer">Choose one correct answer:</string>

    <string name="do_answer">Answer the question</string>
    <string name="remove_test_result">Remove test results</string>
</resources>